# hallw

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROFILE.example  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  start.bat  start.sh
.agents/skills/hitchhikers-guide/: .gitignore  SKILL.md
.agents/skills/jubensha/: SKILL.md
.agents/skills/jubensha/references/: dm_guide.md  game_state_management.md  npc_roleplay_guide.md  script_ancient_kingfall.md  script_ancient_moon.md  script_modern_gang.md  script_modern_secret.md  script_scifi_utopia.md  script_scifi_void.md
.agents/skills/online-shopping/: SKILL.md
.agents/skills/powershell-expert/agents/: openai.yaml
.agents/skills/powershell-expert/references/: office-automation.md
.agents/skills/rscript-expert/: SKILL.md
.agents/skills/rscript-expert/agents/: openai.yaml
.agents/skills/rscript-expert/references/: medical-charts.md
.github/workflow/: test.yml
frontend/: .prettierrc.json  biome.json  electron-builder.yml  electron.vite.config.mjs  eslint.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.web.json
frontend/src/main/: index.js  index.ts
frontend/src/preload/: env.d.ts  index.ts
frontend/src/renderer/: App.tsx  env.d.ts  index.html  main.tsx
frontend/src/renderer/assets/: main.css
frontend/src/renderer/components/: ChatArea.tsx  Confirmation.tsx  InputArea.tsx  RuntimeInput.tsx  Settings.tsx  SettingsModal.tsx  Sidebar.tsx  WelcomeScreen.tsx
frontend/src/renderer/components/ChatArea/: ChatArea.tsx  Confirmation.tsx  RuntimeInput.tsx
frontend/src/renderer/components/InputArea/: InputArea.tsx
frontend/src/renderer/components/Settings/: Settings.tsx
frontend/src/renderer/components/Sidebar/: Sidebar.tsx  ToolPreview.tsx
frontend/src/renderer/components/WelcomeScreen/: History.tsx  QuickStart.tsx  WelcomeScreen.tsx
frontend/src/renderer/contexts/: SocketContext.tsx
frontend/src/renderer/features/bottom/: types.ts
frontend/src/renderer/features/bottom/components/: ActionButton.tsx  BottomBar.tsx  ChatInput.tsx  SubmitButton.tsx
frontend/src/renderer/features/bottom/hooks/: useAutoResize.ts  useInputHistory.ts
frontend/src/renderer/features/bottom/store/: bottomSlice.ts
frontend/src/renderer/features/chat/: types.ts
frontend/src/renderer/features/chat/components/: ChatArea.tsx  Confirmation.tsx  Decision.tsx  ErrorCard.tsx  Indicators.tsx  MarkdownContent.tsx  MessageBubble.tsx  ReasoningAccordion.tsx  RuntimeInput.tsx
frontend/src/renderer/features/chat/hooks/: useActiveSession.ts  useAutoScroll.ts  useCountdown.ts  useEditableTextarea.ts  useSmoothTyping.ts
frontend/src/renderer/features/chat/lib/: utils.ts
frontend/src/renderer/features/settings/: constants.tsx  types.ts
frontend/src/renderer/features/sidebar/: constants.ts  types.ts
frontend/src/renderer/features/titlebar/: TitleBar.tsx
frontend/src/renderer/features/welcome/: constants.tsx  types.ts
frontend/src/renderer/hooks/: useAppInitialization.ts
frontend/src/renderer/src/: App.jsx  env.d.ts  main.tsx
frontend/src/renderer/src/components/: ChatArea.jsx  ChatArea.tsx  InputArea.jsx  SafetyConfirmation.jsx  SafetyConfirmation.tsx  SettingsModal.jsx  SettingsModal.tsx  Sidebar.jsx  Sidebar.tsx  WelcomeScreen.jsx
frontend/src/renderer/src/contexts/: SocketContext.jsx
frontend/src/renderer/store/: store.ts
frontend/src/renderer/store/slices/: socketSlice.ts  uiSlice.ts
frontend/src/renderer/stores/: appStore.ts
skills/email-checker/: SKILL.md
skills/jubensha/: SKILL.md
skills/jubensha/agents/: openai.yaml
skills/jubensha/references/: character_sheet_template.md  dm_guide.md  game_state_management.md  plot_generation_guide.md
skills/powershell-expert/: SKILL.md
skills/rscript-expert/references/: execution.md
skills/stage-builder/: SKILL.md
skills/stage-builder/agents/: openai.yaml
skills/stage-builder/references/: examples.md
src/hallw/: __init__.py  agent_graph.py  agent_state.py  agent_task.py
src/hallw/core/: __init__.py  agent_event_dispatcher.py  agent_event_loop.py  agent_graph.py  agent_llm_mgr.py  agent_renderer.py  agent_runner.py  agent_state.py  agent_task.py
src/hallw/server/: server.py  session.py  session_mgr.py  socket_renderer.py  socket_router.py  socket_routes.py
src/hallw/tools/: __init__.py  ask_info.py  build_stage.py  edit_stages.py  end_stage.py  finish_task.py  tool_response.py
src/hallw/tools/excludes/: __init__.py  build_stages.py  dummy_tool.py
src/hallw/tools/file/: __init__.py  edit.py  local.py  read.py  save.py  write.py
src/hallw/tools/interactive/: request_user_decision.py  request_user_input.py
src/hallw/tools/playwright/: __init__.py  click.py  content.py  fill.py  goto.py  helpers.py  init.py  new_page.py  playwright_mgr.py  playwright_state.py  search.py  structure.py
src/hallw/tools/search/: extract_page.py  search.py
src/hallw/tools/stages/: edit_stages.py  end_stage.py
src/hallw/tools/system/: exec.py  exec_system_command.py  read.py  sleep.py  write.py
src/hallw/tools/utils/: tool_response.py
src/hallw/ui/: renderer.py  rich_renderer.py
src/hallw/ui/pyside/: __init__.py  history_line_edit.py  layout_config.py  main_window.py  qt_renderer.py  settings_dialog.py  styles.py  templates.py
src/hallw/utils/: __init__.py  config_mgr.py  event_bus.py  file_parser.py  hallw_logger.py  history_mgr.py  prompt_mgr.py
src/hallw/utils/templates/: MEMORY.example.md  PERMANENT.example.md  USER.example.md
templates/: USER.example.md
tests/: __init__.py  conftest.py  test_agent_state.py  test_ask_info.py  test_browser_click.py  test_browser_content.py  test_browser_fill.py  test_browser_goto.py  test_browser_new_page.py  test_browser_search.py  test_browser_structure.py  test_file_local.py  test_file_read.py  test_file_save.py  test_file_save_append.py  test_finish_task.py  test_integration_stats.py  test_reflection_logic.py  test_tool_response.py
(+38 files in other folders)
