[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallw"
version = "0.4.0"
description = "An AI automation agent with LangGraph and Playwright"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ethan Nie", email = "ethannie88@gmail.com"}
]
keywords = ["ai", "agent", "automation", "langchain", "langgraph", "playwright", "browser-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "markdown>=3.6",
    "langchain>=1.0.5",
    "langchain_core>=1.0.5",
    "langchain_openai>=1.0.2",
    "langgraph>=0.2.20",
    "playwright>=1.56.0",
    "playwright_stealth>=2.0.0",
    "psutil>=7.0.0",
    "PyPDF2>=3.0.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "typer>=0.20.0",
    "PySide6>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hallwayskiing/hallw"
"Bug Tracker" = "https://github.com/hallwaysskiing/hallw/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "ruff>=0.7.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "src/hallw/ui/pyside/styles.py",
    "src/hallw/ui/pyside/templates.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["hallw"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "playwright_stealth.*",
    "pyautogui.*",
    "PIL.*",
    "PyPDF2.*",
    "markdown.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hallw"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hallw*"]
namespaces = false
