[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallw"
version = "0.10.0"
description = "An AI automation agent with LangGraph and Playwright"
readme = "README.md"
requires-python = "==3.12.*"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ethan Nie", email = "ethannie88@gmail.com"}
]
keywords = ["ai", "agent", "automation", "langchain", "langgraph", "playwright", "browser-use"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "markdown>=3.6",
    "langchain>=1.0.5",
    "langchain_core>=1.0.5",
    "langgraph>=0.2.20",
    "langchain-litellm>=0.4.0",
    "playwright>=1.56.0",
    "playwright_stealth>=2.0.0",
    "pypdf>=6.4.0",
    "psutil>=7.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-socketio>=5.11.0",
    "uvicorn>=0.27.0",
    "trafilatura>=2.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "aiosqlite>=0.22.1",
]

[project.urls]
"Homepage" = "https://github.com/hallwayskiing/hallw"
"Bug Tracker" = "https://github.com/hallwaysskiing/hallw/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "ruff>=0.7.3",
    "commitizen>=3.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
    ".git",
    ".mypy_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "src/hallw/ui/pyside/styles.py",
    "src/hallw/ui/pyside/templates.py",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["hallw"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "playwright.*",
    "playwright_stealth.*",
    "pyautogui.*",
    "PIL.*",
    "PyPDF2.*",
    "markdown.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["hallw"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hallw*"]
namespaces = false

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
version_files = [
    "src/hallw/__init__.py:__version__",
]
